2010-10-18 Ladislav Hagara <hgr@vabo.cz>
	* DEPENDS: removed xf86-video-i810 (has been removed form test already)

2010-09-04 Eric Sandall <sandalle@sourcemage.org>
	* CONFIGURE: -multibuffer no longer an option remove query and from
	  XORG_SERVER_OPTS
	* DEPENDS: Optionally depends on udev for configuration support
	  May only select udev xor (hal (preferred) or dbus)

2010-06-26 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.8.1
	  SOURCE matches upstream posted SHA1
	  Requires DRI (mesalib) 7.8.0+ (currently development release)
	* BUILD: fontdir -> fontrootdir

2010-05-04 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.7.7
	  SOURCE matches upstream posted SHA1

2010-03-24 Vlad Glagolev <stealth@sourcemage.org>
	* [REPAIR^all^]EXPORTS: added, to provide XORG_SERVER_OPTS outside

2010-03-17 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 1.7.6

2010-02-23 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PRE_SUB_DEPENDS, REPAIR^all^PRE_SUB_DEPENDS: fixed DPMS sub
	  dependency to actually return 0 if it is available, otherwise always
	  recompiles xorg-server if something needs DPMS

2010-02-17 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 1.7.5

2010-02-04 Ladislav Hagara <hgr@vabo.cz>
	* CONFLICTS, UP_TRIGGERS: none provider of monolithic X now

2010-01-07 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.7.4
	  SOURCE matches upstream posted SHA1
	  Removed PATCHLEVEL

2009-12-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
	* CONFIGURE: fixed the ati driver name and changed the nvidia one to
	  the provider - NVIDIA
	* DEPENDS: specify the grimoire for dependencies on z-rejected spells;
	  handle errors for the selective video driver choice

2009-12-16 Thomas Orgis <sobukus@sourcemage.org>
	* BUILD: Changed default font prefix to /usr/share/fonts/X11 .
	* CONFIGURE: Added note about font paths.
	* DETAILS: patchlevel

2009-12-15 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.7.3 (bugfix for 1.7.2)