@@ -15,12 +15,12 @@ diff -Nuar hw.orig/xfree86/dixmods/Makefile.in hw/xfree86/dixmods/Makefile.in
  	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
  install-extsmoduleLTLIBRARIES: $(extsmodule_LTLIBRARIES)
  	@$(NORMAL_INSTALL)
-+	$(mkdir_p) "$(DESTDIR)$(extsmoduledir)/mesa"
++	$(mkdir_p) "$(DESTDIR)$(extsmoduledir)/.mesa"
 +	@lst='$(GLXMODS)'; for r in $$lst; do \
 +	if test -f $$r; then \
 +		h=$(am__strip_dir) \
-+		echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) '$$r' '$(DESTDIR)$(extsmoduledir)/mesa/'"; \
-+		$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$r "$(DESTDIR)$(extsmoduledir)/mesa/"; \
++		echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) '$$r' '$(DESTDIR)$(extsmoduledir)/.mesa/'"; \
++		$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$r "$(DESTDIR)$(extsmoduledir)/.mesa/"; \
 +	else :; fi; \
 +	done
  	test -z "$(extsmoduledir)" || $(MKDIR_P) "$(DESTDIR)$(extsmoduledir)"
@@ -43,7 +43,7 @@ diff -Nuar hw.orig/xfree86/dri/Makefile.in hw/xfree86/dri/Makefile.in
  
  libdri_la_LDFLAGS = -module -avoid-version @LIBDRM_LIBS@
 -libdri_ladir = $(moduledir)/extensions
-+libdri_ladir = $(moduledir)/extensions/mesa
++libdri_ladir = $(moduledir)/extensions/.mesa
  libdri_la_SOURCES = \
  	dri.c \
  	dri.h \
