@@ -1,3 +1,6 @@
+2010-11-12 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
+	* gl_select.patch: updated for glselect
+
 2010-10-18 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: removed xf86-video-i810 (has been removed form test already)
 
